# simg_ld

./: .gitignore  .note.txt  CMakeLists.txt  app.cpp  app.h  app_loader.cpp  app_loader.h  app_loader_global.hpp  app_loader_main.cpp  app_main.cpp  channel.cpp  channel.hpp  cmd_args.cpp  cmd_args.h  cmd_args.hpp  cmdline_params.cpp  cmdline_params.h  dyn_obj_info.hpp  global.hpp  heap.hpp  ld.cpp  ld.h  loader.cpp  loader.h  loader_global.hpp  loader_global_funcs.hpp  loader_headers.hpp  main.cpp  mc.cpp  mc.h  mc_main.cpp  mem_space.cpp  mem_space.h  memory_map.cpp  multi_conn.cpp  multi_conn.h  parent_proc.cpp  parent_proc.h  rtld.cpp  rtld.h  (+21 more)
app/: CMakeLists.txt  app.cpp  channel.hpp
include/: app_loader_global.hpp  dyn_obj_info.hpp  loader_global.hpp
mc/: CMakeLists.txt  app_loader.cpp  app_loader.h  heap.hpp  mc.cpp  mc.h  memory_map.h  stack.cpp  stack.h  sync_proc.hpp  trampoline_wrappers.hpp  user_space.h
sgld/: CMakeLists.txt  switch_context.cpp  switch_context.h  trampoline.cpp  trampoline.h  trampoline_wrappers.hpp
src/: main.cpp  ulexec.cpp  ulexec.h
